// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`middleware basic 1`] = `
Object {
  action: findMany,
  args: undefined,
  context: undefined,
  dataPath: Array [],
  model: User,
  runInTransaction: false,
}
`;

exports[`middleware basic 2`] = `
Object {
  action: findMany,
  args: undefined,
  context: undefined,
  dataPath: Array [],
  model: Post,
  runInTransaction: false,
}
`;
